--- a/environment.yml
+++ b/environment.yml
@@ -3,12 +3,14 @@ channels:
   - anaconda
   - conda-forge
   - defaults
+  - pytorch
 dependencies:
+  - pytorch=1.8.0
+  - cudatoolkit=10.1
   - numpy
   - scipy
   - matplotlib
   - pysindy
-  - pytorch
   - pytorch-lightning
   - typing_extensions
   - pyarrow
